--- a/index.html
+++ b/index.html
@@ -32,9 +32,20 @@
         <div class="col-md-6"> 
           <h4>Current Word: </h4>
           <div id="currentWord"></div>
-        <div id="numWins"></div>
           <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-3">
+          <p>Wins: </p>
+          <div id="numWins"></div>
+        </div>
+        <div class="col-md-3">
+          <p>Losses: </p>
+          <div id="numLoss"></div>
+        </div>
+        <div class="col-md-3"></div>
       </div>
     </div>
     
