--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       
     <div class="container-fluid bg-3 text-center">    
       <h3>Guess the word!</h3>
-      <h6>Hint: the word is a Country</h6>
+      <h6>Hint: the word is a Country.</h6>
+      <p>Type a letter to start playing.</p>
       <br>
       <div class="row">
         <div class="col-md-6">
